--- a/app/src/main/res/layout/fragment_records.xml
+++ b/app/src/main/res/layout/fragment_records.xml
@@ -6,8 +6,8 @@
     android:orientation="vertical">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="最近"
         android:textSize="15sp"/>
     <android.support.v7.widget.RecyclerView
