--- a/app/src/main/res/layout/record_item.xml
+++ b/app/src/main/res/layout/record_item.xml
@@ -1,97 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    >
-
-    <ImageView
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        android:id="@+id/person_img"
-        android:src="@mipmap/ic_launcher"/>
-
-    <TextView
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="1dp"
+    app:contentPadding="4dp"
+    app:cardElevation="4dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:id="@+id/person_name"
-        android:text="姓名"
-        android:textSize="25sp"
-        android:gravity="bottom"
-        android:layout_toEndOf="@id/person_img"
-        android:layout_toRightOf="@id/person_img"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:id="@+id/person_telno"
-        android:text="13355558888"
-        android:textSize="20sp"
-        android:gravity="bottom"
-        android:layout_toEndOf="@id/person_name"
-        android:layout_toRightOf="@id/person_name"
-        />
+        android:layout_height="wrap_content"
+        >
 
-    <ImageView
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:id="@+id/contact_type_img"
-        android:layout_below="@+id/person_name"
-        android:layout_toEndOf="@+id/person_img"
-        android:layout_toRightOf="@+id/person_img"
-        android:src="@mipmap/contact_type"
-        />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:id="@+id/person_img"
+            android:src="@mipmap/touxiang"
+            />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:id="@+id/contact_type"
-        android:text="来电"
-        android:textSize="19sp"
-        android:layout_below="@+id/person_name"
-        android:layout_toEndOf="@+id/contact_type_img"
-        android:layout_toRightOf="@+id/contact_type_img"
-        android:gravity="center"
-        />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:id="@+id/person_name"
+            android:text="姓名"
+            android:textSize="24sp"
+            android:gravity="bottom"
+            android:layout_toEndOf="@id/person_img"
+            android:layout_toRightOf="@id/person_img"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:id="@+id/person_telno"
+            android:text="13355558888"
+            android:textSize="16sp"
+            android:gravity="bottom"
+            android:layout_toEndOf="@id/person_name"
+            android:layout_toRightOf="@id/person_name"
+            />
 
-    <ImageView
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:id="@+id/contact_area_img"
-        android:layout_below="@+id/person_name"
-        android:layout_toEndOf="@+id/contact_type"
-        android:layout_toRightOf="@+id/contact_type"
-        android:src="@mipmap/contact_area"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:id="@+id/contact_area"
-        android:text="四川遂宁"
-        android:textSize="19sp"
-        android:layout_below="@id/person_name"
-        android:layout_toEndOf="@+id/contact_area_img"
-        android:layout_toRightOf="@+id/contact_area_img"
-        android:gravity="center"
-        />
-    <ImageView
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:id="@+id/contact_time_img"
-        android:layout_below="@+id/person_name"
-        android:layout_toEndOf="@+id/contact_area"
-        android:layout_toRightOf="@+id/contact_area"
-        android:src="@mipmap/contact_time"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:id="@+id/contact_time"
-        android:text="16/5/6星期五"
-        android:textSize="19sp"
-        android:layout_below="@id/person_name"
-        android:layout_toEndOf="@+id/contact_time_img"
-        android:layout_toRightOf="@+id/contact_time_img"
-        android:gravity="center"
-        />
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:id="@+id/contact_type_img"
+            android:layout_below="@+id/person_name"
+            android:layout_toEndOf="@+id/person_img"
+            android:layout_toRightOf="@+id/person_img"
+            android:src="@mipmap/contact_type"
+            />
 
-</RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:id="@+id/contact_type"
+            android:text="来电"
+            android:textSize="16sp"
+            android:layout_below="@+id/person_name"
+            android:layout_toEndOf="@+id/contact_type_img"
+            android:layout_toRightOf="@+id/contact_type_img"
+            android:gravity="center"
+            />
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:id="@+id/contact_area_img"
+            android:layout_below="@+id/person_name"
+            android:layout_toEndOf="@+id/contact_type"
+            android:layout_toRightOf="@+id/contact_type"
+            android:src="@mipmap/contact_area"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:id="@+id/contact_area"
+            android:text="四川遂宁"
+            android:textSize="16sp"
+            android:layout_below="@id/person_name"
+            android:layout_toEndOf="@+id/contact_area_img"
+            android:layout_toRightOf="@+id/contact_area_img"
+            android:gravity="center"
+            />
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:id="@+id/contact_time_img"
+            android:layout_below="@+id/person_name"
+            android:layout_toEndOf="@+id/contact_area"
+            android:layout_toRightOf="@+id/contact_area"
+            android:src="@mipmap/contact_time"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:id="@+id/contact_time"
+            android:text="16/5/6星期五"
+            android:textSize="16sp"
+            android:layout_below="@id/person_name"
+            android:layout_toEndOf="@+id/contact_time_img"
+            android:layout_toRightOf="@+id/contact_time_img"
+            android:gravity="center"
+            />
+
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
