--- a/app/src/main/res/layout/record_item.xml
+++ b/app/src/main/res/layout/record_item.xml
@@ -2,8 +2,9 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="1dp"
-    app:contentPadding="4dp"
-    app:cardElevation="4dp"
+    app:cardCornerRadius="4dp"
+    app:contentPadding="2dp"
+    app:cardElevation="2dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
