--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="tabbackground">#039be5</color>
     <color name="tabTextColor">#ffffff</color>
     <color name="tabTextSelectedColor">#bdbdbd</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
 </resources>
