--- a/app/src/main/res/layout/record_item.xml
+++ b/app/src/main/res/layout/record_item.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="1dp"
+    android:layout_margin="0.5dp"
     app:cardCornerRadius="4dp"
     app:contentPadding="2dp"
     app:cardElevation="2dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:cardBackgroundColor="@color/white"
+    >
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         >
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="65dp"
-            android:layout_height="65dp"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
             android:id="@+id/person_img"
             android:src="@mipmap/touxiang"
+            android:layout_marginLeft="5dp"
             />
 
         <TextView
@@ -25,9 +28,11 @@
             android:id="@+id/person_name"
             android:text="姓名"
             android:textSize="24sp"
+            android:textColor="@color/black"
             android:gravity="bottom"
             android:layout_toEndOf="@id/person_img"
             android:layout_toRightOf="@id/person_img"
+            android:layout_marginLeft="10dp"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -38,6 +43,7 @@
             android:gravity="bottom"
             android:layout_toEndOf="@id/person_name"
             android:layout_toRightOf="@id/person_name"
+            android:layout_marginLeft="5dp"
             />
 
         <ImageView
@@ -47,6 +53,7 @@
             android:layout_below="@+id/person_name"
             android:layout_toEndOf="@+id/person_img"
             android:layout_toRightOf="@+id/person_img"
+            android:layout_marginLeft="10dp"
             android:src="@mipmap/contact_type"
             />
 
@@ -59,6 +66,7 @@
             android:layout_below="@+id/person_name"
             android:layout_toEndOf="@+id/contact_type_img"
             android:layout_toRightOf="@+id/contact_type_img"
+            android:layout_marginLeft="1dp"
             android:gravity="center"
             />
 
@@ -69,6 +77,7 @@
             android:layout_below="@+id/person_name"
             android:layout_toEndOf="@+id/contact_type"
             android:layout_toRightOf="@+id/contact_type"
+            android:layout_marginLeft="5dp"
             android:src="@mipmap/contact_area"
             />
         <TextView
@@ -80,6 +89,7 @@
             android:layout_below="@id/person_name"
             android:layout_toEndOf="@+id/contact_area_img"
             android:layout_toRightOf="@+id/contact_area_img"
+            android:layout_marginLeft="1dp"
             android:gravity="center"
             />
         <ImageView
@@ -89,6 +99,7 @@
             android:layout_below="@+id/person_name"
             android:layout_toEndOf="@+id/contact_area"
             android:layout_toRightOf="@+id/contact_area"
+            android:layout_marginLeft="5dp"
             android:src="@mipmap/contact_time"
             />
         <TextView
@@ -100,6 +111,7 @@
             android:layout_below="@id/person_name"
             android:layout_toEndOf="@+id/contact_time_img"
             android:layout_toRightOf="@+id/contact_time_img"
+            android:layout_marginLeft="1dp"
             android:gravity="center"
             />
 
