--- a/app/src/main/res/layout/fragment_records.xml
+++ b/app/src/main/res/layout/fragment_records.xml
@@ -4,21 +4,11 @@
     android:layout_height="match_parent"
     tools:context="com.daydayup.magictelebook.main.view.RecordsFragment"
     android:orientation="vertical"
-    android:background="@color/white">
+    android:background="#F8F8FF">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="最近"
-        android:textSize="16sp"/>
-    <include layout="@layout/record_item"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="更早"
-        android:textSize="16sp"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
