--- a/app/src/main/res/layout/record_item.xml
+++ b/app/src/main/res/layout/record_item.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="0.5dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
     app:cardCornerRadius="4dp"
     app:contentPadding="2dp"
     app:cardElevation="2dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/white"
+    android:foreground="?attr/selectableItemBackground"
+    android:stateListAnimator="@drawable/card_touch_raise"
+    android:id="@+id/card_view"
     >
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
@@ -20,6 +24,8 @@
             android:id="@+id/person_img"
             android:src="@mipmap/touxiang"
             android:layout_marginLeft="5dp"
+            app:civ_border_color="@color/tabTextSelectedColor"
+            app:civ_border_width="1dp"
             />
 
         <TextView
@@ -72,5 +78,15 @@
             android:gravity="center"
             />
 
+        <ImageButton
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:id="@+id/call_btn"
+            android:background="@mipmap/call_image"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:layout_alignParentRight="true"/>
+
     </RelativeLayout>
 </android.support.v7.widget.CardView>
+
