--- a/app/src/main/res/layout/fragment_records.xml
+++ b/app/src/main/res/layout/fragment_records.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent"
     tools:context="com.daydayup.magictelebook.main.view.RecordsFragment"
     android:orientation="vertical"
-    android:background="#F8F8FF">
+    >
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/records_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
