--- a/app/src/main/res/layout/record_item.xml
+++ b/app/src/main/res/layout/record_item.xml
@@ -11,7 +11,7 @@
     app:cardBackgroundColor="@color/white"
     android:foreground="?attr/selectableItemBackground"
     android:stateListAnimator="@drawable/card_touch_raise"
-    android:id="@+id/card_view"
+    android:id="@+id/record_card_view"
     >
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
