--- a/app/src/main/res/layout/record_item_first.xml
+++ b/app/src/main/res/layout/record_item_first.xml
@@ -6,6 +6,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
         android:text="最近"
         android:textSize="16sp"/>
     <include layout="@layout/record_item"/>
