--- a/app/src/main/res/layout/record_item_second.xml
+++ b/app/src/main/res/layout/record_item_second.xml
@@ -7,6 +7,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
         android:text="更早"
         android:textSize="16sp"/>
     <include layout="@layout/record_item"/>
