--- a/app/src/main/res/layout/record_more.xml
+++ b/app/src/main/res/layout/record_more.xml
@@ -1,46 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
-    app:cardCornerRadius="4dp"
-    app:contentPadding="2dp"
-    app:cardElevation="2dp"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/white"
-    android:foreground="?attr/selectableItemBackground"
-    android:stateListAnimator="@drawable/card_touch_raise"
-    android:id="@+id/record_more_card_view"
+    android:orientation="horizontal"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal"
-        >
-        <ImageButton
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:id="@+id/call_btn"
-            android:background="@mipmap/callbtn"/>
-        <ImageButton
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:id="@+id/sendmsg_btn"
-            android:background="@mipmap/messagebtn"
-            android:layout_marginLeft="3dp"/>
-        <ImageButton
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:id="@+id/delete_btn"
-            android:background="@mipmap/deletebtn"
-            android:layout_marginLeft="3dp"
-            />
+    <at.markushi.ui.CircleButton
+        android:layout_width="44dip"
+        android:layout_height="44dip"
+        android:id="@+id/record_pw_call"
+        android:src="@mipmap/call_btn"
+        app:cb_color="#FF4081"
+        app:cb_pressedRingWidth="4dip" />
+    <at.markushi.ui.CircleButton
+        android:layout_width="44dip"
+        android:layout_height="44dip"
+        android:id="@+id/record_pw_sendmsg"
+        android:src="@mipmap/message_btn"
+        app:cb_color="#99CC00"
+        app:cb_pressedRingWidth="4dip" />
+    <at.markushi.ui.CircleButton
+        android:layout_width="44dip"
+        android:layout_height="44dip"
+        android:id="@+id/record_pw_edit"
+        android:src="@mipmap/edit_btn"
+        app:cb_color="#039be5"
+        app:cb_pressedRingWidth="4dip" />
+</LinearLayout>
 
-    </LinearLayout>
-
-
-</android.support.v7.widget.CardView>
 
 
