--- a/app/src/main/res/anim/hiddenpw.xml
+++ b/app/src/main/res/anim/hiddenpw.xml
@@ -2,7 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <translate android:fromXDelta="0"
-        android:toXDelta="-100%"
-        android:duration="500"/>
+        android:toXDelta="120%p"
+        android:duration="300"/>
 
 </set>
