--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -22,11 +22,9 @@
             android:layout_height="104dp"
             android:id="@+id/person_img"
             android:src="@mipmap/touxiang2"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
+            android:layout_gravity="center_horizontal"
             app:civ_border_color="@color/tabTextSelectedColor"
-            app:civ_border_width="1dp"
-        />
+            app:civ_border_width="1dp" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,13 +35,17 @@
             android:layout_gravity="center"
             android:paddingTop="5dp"
             />
-        <TextView
+        <com.daydayup.magictelebook.main.adpter.MarqueeText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/weather"
             android:text="武汉 多云转晴 27º"
             android:textSize="12sp"
             android:layout_gravity="center"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             />
     </LinearLayout>
 </android.support.v7.widget.CardView>
