--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -20,6 +20,7 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="104dp"
             android:layout_height="104dp"
+            android:layout_margin="5dp"
             android:id="@+id/person_img"
             android:src="@mipmap/touxiang2"
             android:layout_gravity="center_horizontal"
