--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -13,8 +13,9 @@
         android:layout_height="wrap_content">
         <android.support.v7.widget.RecyclerView
             android:id="@+id/contacts_recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+         />
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/add_btn"
             android:layout_width="wrap_content"
