--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -36,7 +36,7 @@
             android:layout_gravity="center"
             android:paddingTop="5dp"
             />
-        <com.daydayup.magictelebook.main.adpter.MarqueeText
+        <com.daydayup.magictelebook.util.MarqueeText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/weather"
