--- a/app/src/main/res/layout/fragment_records.xml
+++ b/app/src/main/res/layout/fragment_records.xml
@@ -4,8 +4,10 @@
     android:layout_height="match_parent"
     tools:context="com.daydayup.magictelebook.main.view.RecordsFragment"
     android:orientation="vertical"
+    android:background="@color/lightgray"
+    android:id="@+id/records_layout"
     >
-
+    <include layout="@layout/record_search_bar"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/records_recyclerView"
         android:layout_width="match_parent"
