--- a/app/src/main/res/layout/record_search.xml
+++ b/app/src/main/res/layout/record_search.xml
@@ -4,42 +4,43 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="51dp"
-        android:background="@color/white">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/corners_bg_gray"
-            android:layout_toLeftOf="@+id/canclesearch"
-            >
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="16dp"
-                android:src="@mipmap/enlarge_icon"
-                android:id="@+id/enlarge_img"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="5dp"/>
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="horizontal">
+        <FrameLayout
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
             <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:hint="搜索"
-                android:singleLine="true"
-                android:textColor="@color/gray"
-                android:textSize="12sp"
-                android:id="@+id/EidtView"
-                android:layout_toEndOf="@+id/enlarge_img"
-                android:layout_toRightOf="@+id/enlarge_img"/>
-        </RelativeLayout>
+                android:id="@+id/search_et_input"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="10dp"
+                android:drawableLeft="@mipmap/search_icon1"
+                android:drawablePadding="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/corners_bg_gray"
+                android:textSize="14sp"
+                android:gravity="center_vertical"
+                android:imeOptions="actionSearch"
+                android:inputType="text"
+                android:hint="请输入关键字"/>
+
+            <ImageView
+
+                android:layout_marginRight="20dp"
+                android:src="@drawable/iv_delete_bg"
+                android:id="@+id/search_iv_delete"
+                android:layout_gravity="right|center_vertical"
+                android:layout_width="16dp"
+                android:layout_height="16dp"/>
+        </FrameLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/canclesearch"
+            android:id="@+id/cancle_search"
             android:text="取消"
             android:textSize="14sp"
             android:gravity="center"
@@ -48,7 +49,11 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_marginRight="10dp"/>
-    </RelativeLayout>
+    </LinearLayout>
     <include layout="@layout/select_item"/>
+    <ListView
+        android:id="@+id/records_search_listView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
 
