--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="gray">#808080</color>
     <color name="lightgray">#F5F5F5</color>
     <color name="lightblue">#5084FE</color>
+    <color name="red">#FF0000</color>
 </resources>
