--- a/app/src/main/res/layout/contact_info.xml
+++ b/app/src/main/res/layout/contact_info.xml
@@ -4,7 +4,8 @@
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:background="@color/lightgray">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -36,10 +37,61 @@
                 />
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/person_img"
-                android:layout_width="136dp"
-                android:layout_height="136dp"
+                android:layout_width="128dp"
+                android:layout_height="128dp"
                 android:src="@mipmap/touxiang5"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                app:civ_border_color="@color/tabTextSelectedColor"
+                app:civ_border_width="1dp"/>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="-78dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="16dp"
+                    android:text="湖北武汉"
+                    android:id="@+id/contact_area"
+                    android:textSize="12sp"
+                    android:textColor="@color/white"
+                    android:gravity="center"
+                    android:layout_toRightOf="@+id/area_icon"
+                    android:layout_marginLeft="3dp"/>
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:src="@mipmap/area_icon"
+                    android:id="@+id/area_icon"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right"
+                android:layout_marginBottom="10dp"
+                android:layout_marginRight="5dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="多云转大雨"
+                    android:textSize="16sp"
+                    android:textColor="@color/white"
+                    android:id="@+id/contact_weather"
+                    android:layout_marginBottom="-20dp"
+                    android:layout_marginLeft="5dp"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="30º"
+                    android:textSize="64sp"
+                    android:textColor="@color/white"
+                    android:id="@+id/contact_temp"
+                    android:layout_below="@+id/contact_weather"
+                    />
+
+            </RelativeLayout>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -71,6 +123,223 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:paddingTop="24dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                >
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:id="@+id/tel_layout">
+                    <TextView
+                        android:id="@+id/teltext"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:text="电话 "
+                        android:textColor="@color/lightblue"
+                        android:gravity="center_vertical"
+                        android:layout_marginLeft="20dp"
+                        />
+                    <TextView
+                        android:id="@+id/person_telno"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:text="18508259573"
+                        android:textColor="@color/black"
+                        android:gravity="center_vertical"
+                        android:layout_alignParentTop="true"
+                        android:layout_toRightOf="@+id/teltext"
+                        android:layout_toEndOf="@+id/teltext"
+                        android:layout_marginLeft="5dp"/>
+                </RelativeLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:background="#808080"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp"
+                    android:layout_below="@id/tel_layout"
+                    />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:id="@+id/area_layout"
+                    android:layout_below="@+id/tel_layout">
+                    <TextView
+                        android:id="@+id/areatext"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:text="地区 "
+                        android:textColor="@color/lightblue"
+                        android:gravity="center_vertical"
+                        android:layout_marginLeft="20dp"
+                        />
+                    <TextView
+                        android:id="@+id/person_area"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:text="湖北武汉"
+                        android:textColor="@color/black"
+                        android:gravity="center_vertical"
+                        android:layout_alignParentTop="true"
+                        android:layout_toRightOf="@+id/areatext"
+                        android:layout_toEndOf="@+id/areatext"
+                        android:layout_marginLeft="5dp"/>
+                </RelativeLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:background="#808080"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp"
+                    android:layout_below="@id/area_layout"
+                    />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:id="@+id/birth_layout"
+                    android:layout_below="@+id/area_layout">
+                    <TextView
+                        android:id="@+id/birthtext"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:text="生日 "
+                        android:textColor="@color/lightblue"
+                        android:gravity="center_vertical"
+                        android:layout_marginLeft="20dp"
+                        />
+                    <TextView
+                        android:id="@+id/person_birth"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:text="5月21日"
+                        android:textColor="@color/black"
+                        android:gravity="center_vertical"
+                        android:layout_alignParentTop="true"
+                        android:layout_toRightOf="@+id/birthtext"
+                        android:layout_toEndOf="@+id/birthtext"
+                        android:layout_marginLeft="5dp"/>
+                </RelativeLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:background="#808080"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp"
+                    android:layout_below="@id/birth_layout"
+                    />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:background="@color/white">
+                <TextView
+                    android:id="@+id/callcontact"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:text="呼叫"
+                    android:textColor="#5084FE"
+                    android:background="@color/white"
+                    android:layout_marginLeft="20dp"
+                    android:gravity="center_vertical"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:id="@+id/view_calltosend"
+                    android:layout_height="0.5dp"
+                    android:background="#808080"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp"
+                    android:layout_below="@+id/callcontact"
+                    />
+                <TextView
+                    android:id="@+id/sendcontactmsg"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:text="发送信息"
+                    android:textColor="#5084FE"
+                    android:background="@color/white"
+                    android:layout_marginLeft="20dp"
+                    android:gravity="center_vertical"
+                    android:layout_below="@+id/view_calltosend"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:background="#808080"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp"
+                    android:layout_below="@+id/sendcontactmsg"
+                    />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:background="@color/white">
+                <TextView
+                    android:id="@+id/addnewcontact"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:text="新建联系人"
+                    android:textColor="#5084FE"
+                    android:background="@color/white"
+                    android:layout_marginLeft="20dp"
+                    android:gravity="center_vertical"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:id="@+id/view_newtoblack"
+                    android:background="#808080"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp"
+                    android:layout_below="@+id/addnewcontact"
+                    />
+                <TextView
+                    android:id="@+id/addtoblack"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:text="加入黑名单"
+                    android:textColor="@color/red"
+                    android:background="@color/white"
+                    android:layout_marginLeft="20dp"
+                    android:gravity="center_vertical"
+                    android:clickable="true"
+                    android:layout_below="@+id/view_newtoblack"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:id="@+id/view_blacktodelete"
+                    android:background="#808080"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp"
+                    android:layout_below="@+id/addtoblack"
+                    />
+                <TextView
+                    android:id="@+id/deleteContact"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:text="删除联系人"
+                    android:textColor="@color/red"
+                    android:background="@color/white"
+                    android:layout_marginLeft="20dp"
+                    android:gravity="center_vertical"
+                    android:layout_below="@+id/view_blacktodelete"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:background="#808080"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp"
+                    android:layout_below="@+id/deleteContact"
+                    />
+
+
+            </RelativeLayout>
 
 
             
