--- a/app/src/main/res/layout/record_item.xml
+++ b/app/src/main/res/layout/record_item.xml
@@ -16,21 +16,22 @@
         >
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:id="@+id/person_img"
             android:src="@mipmap/touxiang"
             android:layout_marginLeft="5dp"
+            android:layout_margin="2dp"
             app:civ_border_color="@color/tabTextSelectedColor"
             app:civ_border_width="1dp"
             />
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="36dp"
+            android:layout_height="32dp"
             android:id="@+id/person_name"
             android:text="姓名"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:textColor="@color/black"
             android:gravity="bottom"
             android:layout_toEndOf="@id/person_img"
@@ -40,10 +41,11 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="20dp"
+            android:layout_height="16dp"
             android:id="@+id/contact_type"
-            android:text="来电,"
-            android:textSize="15sp"
+            android:text="来电"
+            android:textColor="@color/black"
+            android:textSize="12sp"
             android:layout_below="@+id/person_name"
             android:layout_toEndOf="@+id/person_img"
             android:layout_toRightOf="@+id/person_img"
@@ -53,13 +55,26 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:id="@+id/contact_area"
-            android:text="四川遂宁,"
-            android:textSize="15sp"
+            android:layout_height="16dp"
+            android:text=","
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            android:id="@+id/divide1"
             android:layout_below="@id/person_name"
             android:layout_toEndOf="@+id/contact_type"
             android:layout_toRightOf="@+id/contact_type"
+            android:gravity="center"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="16dp"
+            android:id="@+id/contact_area"
+            android:text="四川遂宁"
+            android:textSize="12sp"
+            android:textColor="@color/black"
+            android:layout_below="@id/person_name"
+            android:layout_toEndOf="@+id/divide1"
+            android:layout_toRightOf="@+id/divide1"
             android:gravity="center"
             />
 
@@ -68,11 +83,12 @@
             android:layout_height="20dp"
             android:id="@+id/contact_time"
             android:text="16/5/6星期五"
-            android:textSize="15sp"
-            android:layout_below="@id/person_name"
-            android:layout_toEndOf="@+id/contact_area"
-            android:layout_toRightOf="@+id/contact_area"
-            android:gravity="center"
+            android:textSize="14sp"
+            android:layout_centerVertical="true"
+            android:layout_alignTop="@+id/call_btn"
+            android:layout_toLeftOf="@+id/call_btn"
+            android:layout_toStartOf="@+id/call_btn"
+            android:layout_marginRight="5dp"
             />
 
         <ImageButton
