--- a/app/src/main/res/layout/record_item_last.xml
+++ b/app/src/main/res/layout/record_item_last.xml
@@ -4,13 +4,114 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <include layout="@layout/record_item"/>
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        app:contentPadding="2dp"
+        app:cardElevation="2dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/white"
+        android:foreground="?attr/selectableItemBackground"
+        android:stateListAnimator="@drawable/card_touch_raise"
+        android:id="@+id/record_card_view_last"
+        >
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            >
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:id="@+id/person_img"
+                android:src="@mipmap/touxiang"
+                android:layout_marginLeft="5dp"
+                android:layout_margin="2dp"
+                app:civ_border_color="@color/tabTextSelectedColor"
+                app:civ_border_width="1dp"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:id="@+id/person_name"
+                android:text="姓名"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:gravity="bottom"
+                android:layout_toEndOf="@id/person_img"
+                android:layout_toRightOf="@id/person_img"
+                android:layout_marginLeft="10dp"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="16dp"
+                android:id="@+id/contact_type"
+                android:text="来电"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                android:layout_below="@+id/person_name"
+                android:layout_toEndOf="@+id/person_img"
+                android:layout_toRightOf="@+id/person_img"
+                android:layout_marginLeft="10dp"
+                android:gravity="center"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="16dp"
+                android:text=","
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                android:id="@+id/divide1"
+                android:layout_below="@id/person_name"
+                android:layout_toEndOf="@+id/contact_type"
+                android:layout_toRightOf="@+id/contact_type"
+                android:gravity="center"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="16dp"
+                android:id="@+id/contact_area"
+                android:text="四川遂宁"
+                android:textSize="12sp"
+                android:textColor="@color/black"
+                android:layout_below="@id/person_name"
+                android:layout_toEndOf="@+id/divide1"
+                android:layout_toRightOf="@+id/divide1"
+                android:gravity="center"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:id="@+id/contact_time"
+                android:text="16/5/6星期五"
+                android:textSize="14sp"
+                android:layout_centerVertical="true"
+                android:layout_alignTop="@+id/more_btn_last"
+                android:layout_toLeftOf="@+id/more_btn_last"
+                android:layout_toStartOf="@+id/more_btn_last"
+                android:layout_marginRight="5dp"
+                />
+
+            <ImageButton
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:id="@+id/more_btn_last"
+                android:background="@mipmap/more"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:layout_alignParentRight="true"/>
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
         android:id="@+id/load_records"
-        android:textSize="15sp"
+        android:textSize="12sp"
         android:text="加载更多通话记录……"/>
 
 </LinearLayout>
