--- a/app/src/main/res/layout/record_edit_1.xml
+++ b/app/src/main/res/layout/record_edit_1.xml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center|bottom"
+    android:orientation="vertical"
     >
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="81.0dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:background="@drawable/corners_bg_white"
             >
             <TextView
-                android:id="@+id/addToBlackList"
+                android:id="@+id/item1"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:text="加入黑名单"
                 android:textColor="#5084FE"
                 android:gravity="center"
+                android:clickable="true"
                 />
             <View
                 android:layout_width="match_parent"
@@ -30,28 +27,29 @@
                 android:layout_centerVertical="true"
                 />
             <TextView
-                android:id="@+id/deleteRecord"
+                android:id="@+id/item2"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:text="删除"
-                android:textColor="#FF0000"
+                android:textColor="@color/lightblue"
                 android:gravity="center"
-                android:layout_below="@+id/addToBlackList"
+                android:clickable="true"
+                android:layout_below="@+id/item1"
                 />
         </RelativeLayout>
         <TextView
-            android:id="@+id/cancleEdit"
+            android:id="@+id/action"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:text="取消"
             android:textColor="#5084FE"
             android:background="@drawable/corners_bg_white"
             android:gravity="center"
             android:layout_marginTop="18dp"
+            android:clickable="true"
             />
-    </LinearLayout>
-</ScrollView>
+</LinearLayout>
 
 
