--- a/app/src/main/res/layout/contact_info.xml
+++ b/app/src/main/res/layout/contact_info.xml
@@ -32,7 +32,8 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:fitsSystemWindows="true"
-                android:src="@mipmap/ic_launcher"
+                android:src="@mipmap/testbg"
+                android:clickable="true"
                 app:layout_collapseMode="parallax"
                 />
             <de.hdodenhof.circleimageview.CircleImageView
@@ -41,6 +42,7 @@
                 android:layout_height="128dp"
                 android:src="@mipmap/touxiang5"
                 android:layout_gravity="center"
+                android:clickable="true"
                 app:civ_border_color="@color/tabTextSelectedColor"
                 app:civ_border_width="1dp"/>
             <RelativeLayout
@@ -201,6 +203,7 @@
                     android:layout_height="40dp"
                     android:id="@+id/birth_layout"
                     android:layout_below="@+id/area_layout">
+
                     <TextView
                         android:id="@+id/birthtext"
                         android:layout_width="wrap_content"
@@ -208,8 +211,7 @@
                         android:text="生日 "
                         android:textColor="@color/lightblue"
                         android:gravity="center_vertical"
-                        android:layout_marginLeft="20dp"
-                        />
+                        android:layout_marginLeft="20dp" />
                     <TextView
                         android:id="@+id/person_birth"
                         android:layout_width="wrap_content"
@@ -354,7 +356,7 @@
         android:layout_width="wrap_content"
         app:layout_anchor="@id/appbar"
         app:layout_anchorGravity="bottom|right|end"
-        android:src="@mipmap/edit_btn"
+        android:src="@mipmap/editpen"
         android:layout_margin="@dimen/fab_margin"
         android:clickable="true"
         android:id="@+id/edit_info"
